Minor look and feel tweaks

--- a/public/remote.html
+++ b/public/remote.html
@@ -7,8 +7,8 @@
 </head>
 
 	<body>
-	<p>Click the button to present a modal on TV 📺</p>
-	<button onclick="trigger()">Click here to trigger the modal!</button>
+	<p>📲📺 Remote Control TV Overlay Test - Remote Screen Emulator</p>
+			<button class="btn" onclick="trigger()">📺 Click To Deploy A TV Overlay!</button>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/gh/vast-engineering/jquery-popup-overlay@2/jquery.popupoverlay.min.js"></script>
 		<script>
