--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
 </head>
 
 <body>
-<p>This is the Body ...</p>
+<p>📲📺 Remote Control TV Overlay Test - TV Screen Emulator</p>
 <div id="date"></div>
 <br><br>
-<button class="trigger">Click here to trigger the modal!</button>
+<!-- <button class="trigger"></button> <= removed for TV UI-->
 		<div class="modal">
 		    <div class="modal-content">
-		        <span class="close-button">×</span>
-		        <h1>Hello, I'm da modal!</h1>
+		        <!-- <span class="close-button">×</span> <= removed for TV UI-->
+		        <h2>Success, I'm The Overlay! 👍</h2>
 		    </div>
 		</div>
 
