Minor Tweaks to look & feel via index.html and style.css

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 <p>📲📺 Remote Control TV Overlay Test - TV Screen Emulator</p>
 <div id="date"></div>
 <br><br>
+	<div class="hero-image"></div>
 <!-- <button class="trigger"></button> <= removed for TV UI-->
 		<div class="modal">
 		    <div class="modal-content">
